[gd_scene load_steps=2 format=2]

[ext_resource path="res://main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 231.0
margin_top = 185.0
margin_right = 281.0
margin_bottom = 263.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
bbcode_text = "[center][b]Demon Sigil[/b][/center]"
text = "Demon Sigil"
fit_content_height = true
scroll_active = false

[node name="StartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 50.0
margin_bottom = 54.0
text = "START"

[node name="ExitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 78.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
